# yet-another-spotify-tray

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  pl_PL.ts  spotify-tray.desktop  winctl.cpp
l10n/: pl_PL.ts
res/: icons.qrc  l10n.qrc
src/: app.cpp  app.hpp  main.cpp  mainwindow.hpp  winctl.cpp  winctl.hpp  window.cpp  window.hpp
xdg/: spotify-tray.desktop
